# planscope

./: .gitignore  README.md
.github/workflows/: ci.yml
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  model.rs  mysql.rs  postgres.rs  sqlite.rs
crates/parser/tests/: basic.rs
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  VISION.md
docs/launch/: devto.md
scripts/: build-site.sh  build-wasm.sh
site/: index.html  style.css
site/assets/: index-BkqEYWRp.js  index-CH_9zzSJ.css  index-CPse7nJP.css  planscope_parser_bg-B8zARXig.wasm
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: engine.test.ts  engine.ts  inspector.test.ts  main.test.ts  main.ts  parser.test.ts  parser.ts  plan.test.ts  plan.ts  storage.test.ts  style.css  tree-view.test.ts  tree-view.ts
