[package]
name = "planscope-parser"
version = "0.1.0"
edition = "2021"
description = "Parses Postgres, MySQL, and SQLite EXPLAIN output into one normalized plan-tree model."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.126"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "=0.6.5"

[dev-dependencies]
proptest = "1.11.0"
